more title changes

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,9 +3,9 @@
 
   <header class="jumbotron">
     <div class="container">
-      <h1>Welcome to YelpCamp</h1>
+      <h1>Welcome to OurTrip</h1>
       <p>
-        This is where I've been and plan on going
+        This is we plan on going
       </p>
       <p>
         <a class="btn btn-primary btn-small" href="/campgrounds/new">Add New Campground!</a>
