improved landing page & changed to personal photographs

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,7 +23,7 @@
 
     <div id="landing-header">
  		<h1>Welcome to OurTrip!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Camping Trips</a>
+		<a href="/campgrounds" class="btn btn-lg btn-success">View Upcoming Camping Trips</a>
     </div>
 
     <ul class="slideshow">
