--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -36,33 +36,33 @@ body {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 50s linear infinite;
+  animation: imageAnimation 40s linear infinite;
 }
 
 .slideshow li:nth-child(1) {
-  background-image: url(http://i.imgur.com/K3mPv14.jpg)
+  background-image: url(https://i.imgur.com/dxlvzdS.jpg)
 }
 .slideshow li:nth-child(2) {
-  background-image: url(http://i.imgur.com/SBEmFpv.jpg);
-  animation-delay: 10s;
+  background-image: url(https://i.imgur.com/SDljN74.jpg);
+  animation-delay: 8s;
 }
 .slideshow li:nth-child(3) {
-  background-image: url(http://i.imgur.com/emvhOnb.jpg);
-  animation-delay: 20s;
+  background-image: url(https://i.imgur.com/Uv0pYWL.jpg);
+  animation-delay: 16s;
 }
 .slideshow li:nth-child(4) {
-  background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
-  animation-delay: 30s;
+  background-image: url(https://i.imgur.com/F9GQq0N.jpg);
+  animation-delay: 24s;
 }
 .slideshow li:nth-child(5) {
-  background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
-  animation-delay: 40s;
+  background-image: url(https://i.imgur.com/mCZSXpB.jpg);
+  animation-delay: 32s;
 }
 
 @keyframes imageAnimation {
   0% {
     opacity: 0;
-    animation-timing-function: ease-in;
+    animation-timing-function: ease;
   }
   10% {
     opacity: 1;
