--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,7 @@
     <div class="container">
       <h1>Welcome to OurTrip</h1>
       <p>
-        This is we plan on going
+        This is where we plan on going
       </p>
       <p>
         <a class="btn btn-primary btn-small" href="/campgrounds/new">Add New Campground!</a>
