--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,7 +14,7 @@
         <img class="img-responsive" src="<%= campground.image %>">
         <div class="caption">
           <h4 class="pull-right">$<%= campground.price%>/night</h4>
-          <h1><a><%= campground.name%></a></h1>
+          <h1><%= campground.name%></h1>
           <p><%= campground.description %></p>
           <h6>Submitted by <%= campground.author.username %></h6>
           <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
