--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="form_page">
 
-  <h1>Login Page</h1>
+  <h1>Login</h1>
 
   <form action="/login" method="post">
     <div class="form-group">
