--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,11 +2,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <p class="lead">OurTrip</p>
+      <p class="lead">Details</p>
       <div class="list-group">
-        <li class="list-group-item">Info 1</li>
-        <li class="list-group-item">Info 2</li>
-        <li class="list-group-item">Info 3</li>
+        <li class="list-group-item">Date     - </li>
+        <li class="list-group-item">Campers  - </li>
+        <li class="list-group-item">Vehicles - </li>
       </div>
     </div>
     <div class="col-md-9">
