--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
     <div class="form-group">
       <input type="password" name="password" value="" placeholder="Password">
     </div>
-    <button>Sign Up</button>
+    <button class="btn btn-primary btn-small">Sign Up</button>
     <!-- <a class="buttons" href="/login"> Login</a> -->
   </form>
 
