--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,12 +6,12 @@
 
   <form action="/login" method="post">
     <div class="form-group">
-      <input type="text" name="username" value="" placeholder="username">
+      <input type="text" name="username" value="" placeholder="Username">
     </div>
     <div class="form-group">
-      <input type="password" name="password" value="" placeholder="password">
+      <input type="password" name="password" value="" placeholder="Password">
     </div>
-    <input type="submit" value="Login">
+    <input class="btn btn-primary btn-small" type="submit" value="Login">
     <!-- <a class="buttons" href="/register"> Register</a> -->
   </form>
 
