bug fixes, style updates

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,6 +19,12 @@
   padding-bottom: 19px;
 }
 
+@media screen and max-width: @screen-xs-max {
+    .form_page {
+      width: 60%;
+    }
+ }
+
 .form_page h1 {
   padding-bottom: 4px;
   font-size: 55px;
